@@ -1295,6 +1295,7 @@ Revision history for Perl extension Imager.
 - added inline_replace_color.pl to samples
 - constify the Imager API
 - document Imager::Filter::Mandelbrot
+- convert dynfilt/flines.c to Imager::Filter::Flines
 
 =================================================================
 
